# SDStore

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.sh  compile.sh  test.sh
.run/: sdstore.run.xml  sdstored.run.xml
docs/: __server_8h.html  __server_8h.js  __server_8h__dep__incl.map  __server_8h__dep__incl.md5  __server_8h__incl.map  __server_8h__incl.md5  __server_8h_source.html  annotated.html  annotated_dup.js  classes.html  client_8c.html  client_8c.js  client_8c__incl.map  client_8c__incl.md5  client_8c_a0163c1b682279c0ecf5bc612f622664b_icgraph.map  client_8c_a0163c1b682279c0ecf5bc612f622664b_icgraph.md5  client_8c_a0ddf1224851353fc92bfbff6f499fa97_cgraph.map  client_8c_a0ddf1224851353fc92bfbff6f499fa97_cgraph.md5  client_8c_a30215074a82a05896a51d872abcd854e_icgraph.md5  client_8c_a553bc08fe11f741980ed7fd3be36f5ff_icgraph.map  client_8c_a553bc08fe11f741980ed7fd3be36f5ff_icgraph.md5  client_8c_a5f4a9d756f5f1ee1d539263198d24583_icgraph.md5  client_8c_a75c2e94360fa8e46050b4f66fe444d6b_cgraph.map  client_8c_a75c2e94360fa8e46050b4f66fe444d6b_cgraph.md5  client_8c_a8fc8014354a83be36e1a2056cb296934_icgraph.map  client_8c_ad59530239b9497065c1243b9e92b411f_icgraph.map  client_8c_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  graph_legend.html  graph_legend.md5  (+153 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  defines_0.js  defines_1.js  enumvalues_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  (+8 more)
etc/: sdstored.conf
report/: relprojLayout.tex
src/: _server.h  client.c  env.c  env.h  main.c  sdstore.c  sdstored.c  sdstored.h  server.c  util.c  util.h
src/util/: command.c  command.h  common.c  common.h  env.c  env.h  pqueue.c  (+13 more)
tests/: concurrency.yml  concurrency_and_limit.yml  ctrl_c.yml  impossible.yml  priority.yml  status.yml  test.sh  test_script.sh
